Add arch/arm64/configs/ modifications
Signed-off-by: ShivamKumarJha <jha.shivam3@gmail.com>

--- a/arch/arm64/configs/msm8937-perf_defconfig
+++ b/arch/arm64/configs/msm8937-perf_defconfig
@@ -39,7 +39,7 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SIG=y
-CONFIG_MODULE_SIG_FORCE=y
+# CONFIG_MODULE_SIG_FORCE is not set
 CONFIG_MODULE_SIG_SHA512=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_ARCH_MSM=y
@@ -236,7 +236,7 @@ CONFIG_MSM_BT_POWER=y
 CONFIG_CFG80211=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_RFKILL=y
-CONFIG_NFC_NQ=y
+###CONFIG_NFC_NQ is not set
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
@@ -307,18 +307,19 @@ CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
 CONFIG_INPUT_TABLET=y
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v21=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v21=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v26=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_v26=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v26=y
-CONFIG_TOUCHSCREEN_ATMEL_MXT=y
-CONFIG_TOUCHSCREEN_GEN_VKEYS=y
-CONFIG_TOUCHSCREEN_FT5X06=y
-CONFIG_FT_SECURE_TOUCH=y
-CONFIG_TOUCHSCREEN_MAXIM_STI=y
+CONFIG_TOUCHSCREEN_HIMAX_I2C=y
+CONFIG_TOUCHSCREEN_HIMAX_DEBUG=y
+#CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v21 is not set
+#CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v21 is not set
+#CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v26 is not set
+#CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_v26 is not set
+#CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v26 is not set
+#CONFIG_TOUCHSCREEN_ATMEL_MXT is not set
+#CONFIG_TOUCHSCREEN_GEN_VKEYS is not set
+#CONFIG_TOUCHSCREEN_FT5X06 is not set
+#CONFIG_FT_SECURE_TOUCH is not set
+#CONFIG_TOUCHSCREEN_MAXIM_STI is not set
 CONFIG_INPUT_MISC=y
-CONFIG_INPUT_HBTP_INPUT=y
 CONFIG_INPUT_KEYCHORD=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
@@ -500,6 +501,8 @@ CONFIG_LEDS_QPNP=y
 CONFIG_LEDS_QPNP_FLASH=y
 CONFIG_LEDS_QPNP_WLED=y
 CONFIG_LEDS_TRIGGERS=y
+CONFIG_LEDS_AW2013=y
+CONFIG_LEDS_AW2023=y
 CONFIG_SWITCH=y
 CONFIG_EDAC=y
 CONFIG_EDAC_MM_EDAC=y
@@ -660,3 +663,46 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
+CONFIG_BQ2560X_CHARGER=y
+CONFIG_BQ27426_FG=y
+CONFIG_REGULATOR_TPS65132=y
+CONFIG_VIB_GPIO=y
+#add for fingerprint
+CONFIG_FINGERPRINT_SUNWAVE_FINGER=y
+CONFIG_FINGERPRINT_FPC1020_GM=y
+#end
+CONFIG_BQ2560X_CHARGER=y
+CONFIG_REGULATOR_TPS65132=y
+CONFIG_BQ27426_FG=y
+#lc mike_zhu 20170816 add for devinfo vibrator tas2560 start
+CONFIG_KERNEL_CUSTOM_L2300=y
+CONFIG_I2C_DEVINFO=y
+CONFIG_VIB_GPIO=y
+CONFIG_TAS2560_CODEC=y
+CONFIG_SND_SOC_TAS2560=y
+CONFIG_TAS2560_MISC=y
+CONFIG_TAS2560_REGMAP=y
+#lc mike_zhu 20170816 add for devinfo vibrator tas2560 end
+CONFIG_TOUCHSCREEN_FTS=y
+
+#Increase the dmesg log buffer
+CONFIG_LOG_BUF_SHIFT=21
+
+#reboot when trigger dump
+CONFIG_SSR_REBOOT=y
+
+#
+# Qualcomm Atheros Prima WLAN module
+#
+# CONFIG_PRIMA_WLAN is not set
+CONFIG_PRONTO_WLAN=y
+# CONFIG_PRIMA_WLAN_BTAMP is not set
+CONFIG_PRIMA_WLAN_LFR=y
+CONFIG_PRIMA_WLAN_OKC=y
+CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
+CONFIG_WLAN_FEATURE_11W=y
+CONFIG_QCOM_TDLS=y
+CONFIG_QCOM_VOWIFI_11R=y
+CONFIG_ENABLE_LINUX_REG=y
+CONFIG_WLAN_OFFLOAD_PACKETS=y
+# CONFIG_GOLDFISH is not set
