--- a/arch/arm64/configs/msm8937_defconfig
+++ b/arch/arm64/configs/msm8937_defconfig
@@ -235,7 +235,7 @@ CONFIG_MSM_BT_POWER=y
 CONFIG_CFG80211=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_RFKILL=y
-CONFIG_NFC_NQ=y
+###CONFIG_NFC_NQ is not set
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
@@ -306,16 +306,18 @@ CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
 CONFIG_INPUT_TABLET=y
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v21=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v21=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v26=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_v26=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v26=y
-CONFIG_TOUCHSCREEN_ATMEL_MXT=y
-CONFIG_TOUCHSCREEN_GEN_VKEYS=y
-CONFIG_TOUCHSCREEN_FT5X06=y
-CONFIG_FT_SECURE_TOUCH=y
-CONFIG_TOUCHSCREEN_MAXIM_STI=y
+CONFIG_TOUCHSCREEN_HIMAX_I2C=y
+CONFIG_TOUCHSCREEN_HIMAX_DEBUG=y
+#CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v21 is not set
+#CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v21 is not set
+#CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v26 is not set
+#CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_v26 is not set
+#CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_v26 is not set
+#CONFIG_TOUCHSCREEN_ATMEL_MXT is not set
+#CONFIG_TOUCHSCREEN_GEN_VKEYS is not set
+#CONFIG_TOUCHSCREEN_FT5X06 is not set
+#CONFIG_FT_SECURE_TOUCH is not set
+#CONFIG_TOUCHSCREEN_MAXIM_STI is not set
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_HBTP_INPUT=y
 CONFIG_INPUT_KEYCHORD=y
@@ -503,6 +505,8 @@ CONFIG_LEDS_QPNP=y
 CONFIG_LEDS_QPNP_FLASH=y
 CONFIG_LEDS_QPNP_WLED=y
 CONFIG_LEDS_TRIGGERS=y
+CONFIG_LEDS_AW2013=y
+CONFIG_LEDS_AW2023=y
 CONFIG_SWITCH=y
 CONFIG_EDAC=y
 CONFIG_EDAC_MM_EDAC=y
@@ -712,3 +716,30 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
+CONFIG_BQ2560X_CHARGER=y
+CONFIG_BQ27426_FG=y
+CONFIG_REGULATOR_TPS65132=y
+CONFIG_VIB_GPIO=y
+#add for fingerprint
+CONFIG_FINGERPRINT_SUNWAVE_FINGER=y
+CONFIG_FINGERPRINT_FPC1020_GM=y
+#end
+CONFIG_BQ2560X_CHARGER=y
+CONFIG_REGULATOR_TPS65132=y
+CONFIG_BQ27426_FG=y
+#lc mike_zhu 20170816 add for devinfo vibrator tas2560 start
+CONFIG_KERNEL_CUSTOM_L2300=y
+CONFIG_I2C_DEVINFO=y
+CONFIG_VIB_GPIO=y
+CONFIG_TAS2560_CODEC=y
+CONFIG_SND_SOC_TAS2560=y
+CONFIG_TAS2560_MISC=y
+CONFIG_TAS2560_REGMAP=y
+
+#lc mike_zhu 20170816 add for devinfo vibrator tas2560 end
+CONFIG_TOUCHSCREEN_FTS=y
+#Increase the dmesg log buffer
+CONFIG_LOG_BUF_SHIFT=21
+
+#reboot when trigger dump.
+CONFIG_SSR_REBOOT=y
